fix: background blurring

--- a/app.css
+++ b/app.css
@@ -26,7 +26,7 @@
   --cards: #e4e6e6; /* Cards color */
 
   /* Image background  */
-  --imgbg: url(assets/background.jpg); /* Image URL */
+  --imgbg: url(https://i.pinimg.com/originals/4b/c3/6d/4bc36d6c4b9719cb98fe899942c2d2be.gif); /* Image URL */
   --imgcol: linear-gradient(
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.7)
@@ -45,8 +45,8 @@
 
   /* Image background  */
   --imgcol: linear-gradient(
-    rgba(0, 0, 0, 0.85),
-    rgba(0, 0, 0, 0.85)
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
   ); /* Filter color */
 }
 
